<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.diraj.androidnanodegree.HomeActivity">

    <TextView
        android:id="@+id/headerText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/header_name"
        android:textColor="@color/colorBlue"
        android:textSize="@dimen/activity_text_header" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/margin_top"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <Button
            android:id="@+id/popularMovies"
            android:layout_width="@dimen/button_width"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_top"
            android:background="@color/colorGreen"
            android:onClick="onButtonClick"
            android:text="@string/popular_movies"
            android:textColor="@color/textColor" />

        <Button
            android:id="@+id/stockHawk"
            android:layout_width="@dimen/button_width"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_top"
            android:background="@color/colorGreen"
            android:onClick="onButtonClick"
            android:text="@string/stock_hawk"
            android:textColor="@color/textColor" />

        <Button
            android:id="@+id/buildItBigger"
            android:layout_width="@dimen/button_width"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_top"
            android:background="@color/colorGreen"
            android:onClick="onButtonClick"
            android:text="@string/build_it_bigger"
            android:textColor="@color/textColor" />

        <Button
            android:id="@+id/makeYourAppMaterial"
            android:layout_width="@dimen/button_width"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_top"
            android:background="@color/colorGreen"
            android:onClick="onButtonClick"
            android:text="@string/make_your_app_material"
            android:textColor="@color/textColor" />

        <Button
            android:id="@+id/goUbiquitous"
            android:layout_width="@dimen/button_width"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_top"
            android:background="@color/colorGreen"
            android:onClick="onButtonClick"
            android:text="@string/go_ubiquitous"
            android:textColor="@color/textColor" />

        <Button
            android:id="@+id/capstone"
            android:layout_width="@dimen/button_width"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_top"
            android:background="@color/colorRed"
            android:onClick="onButtonClick"
            android:text="@string/capstone"
            android:textColor="@color/textColor" />
    </LinearLayout>

</RelativeLayout>
